# varviewer

./: .gitignore  README.md  genRef.kb
analysis/: analysis.py  debug.py  dwarf_iced_map.py  dwarf_vex_map.py  filter.py  find.py  hint.py  libanalysis.py  libresult.py  main.py  parse_mapping.py  processVEX.py  register_mapping.py  rewrite.py  statistic.py  test.py  util.py  variable.py
analysis/check/: README.md  analysis_check.py  linux_ans.json  linux_var.json
dev/: Dockerfile
extracter/: .clang-format  Address.cpp  Address.h  CMakeLists.txt  Evaluator.cpp  Evaluator.h  Expression.cpp  Expression.h  Makefile  check.py  frame.cpp  frame.h  jsonUtil.cpp  jsonUtil.h  ranges.cpp  ranges.h  statistics.cpp  statistics.h  type.cpp  type.h  util.cpp  util.h  varLocator.cpp  varLocator.h
extracter/src/: Address.cpp  CMakeLists.txt  Evaluator.cpp  Expression.cpp  StructType.cpp  address.cpp  evaluator.cpp  expression.cpp  frame.cpp  jsonUtil.cpp  json_util.cpp  main.cpp  ranges.cpp  statistics.cpp  type.cpp  util.cpp  varLocator.cpp  var_locator.cpp
extracter/src/include/: Address.h  Evaluator.h  Expression.h  StructType.h  address.h  evaluator.h  expression.h  frame.h  jsonUtil.h  json_util.h  logger.h  ranges.h  statistics.h  type.h  util.h  varLocator.h  var_locator.h
scripts/Ida/: Instruction.py  InstructionOp.py  RegisterOp.py  ResultFormat.py  main.py
test/: addrTest  addrTest.c  addrTest.dis  addrTest.frame  addrTest.frame.interp  addrTest.info  addrTest.json  addrTest.vex  batch.py  binutils-check.sh  gdbCheck.py  genRandom.py  genRef.kb  main.py  util.py
(+5 files in other folders)
